// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link changes the class when hovered 1`] = `
<a
  className="normal"
  href="http://www.baidu.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Baidu
</a>
`;

exports[`Link changes the class when hovered 2`] = `
<a
  className="hovered"
  href="http://www.baidu.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Baidu
</a>
`;
